--- a/banana/css/info.css
+++ b/banana/css/info.css
@@ -56,8 +56,9 @@ header.fixed + section {
   font-size: 16px;
   text-align: center;
 }
-#nav > ul > li > a:hover {
+#nav > ul > li:nth-child(odd) > a:hover {/* content 있는 부분만 호버되게 하기 */
   color: #d3372a;
+  font-weight: 500;
 }
 #nav::after {
   content: ""; display: block; clear: both;
@@ -81,6 +82,11 @@ header.fixed + section {
   background-image: url('../images/info-banner.jpg');
   background-repeat: no-repeat;
   background-size: cover;
+  animation: big 2s forwards;
+}
+@keyframes big {
+  from {transform: scale(1.3);}
+  to {transform: scale(1);}
 }
 #banner-txt {
   padding: 210px 0;
