--- a/lululemon/css/info.css
+++ b/lululemon/css/info.css
@@ -38,6 +38,19 @@ a {
   font-weight: 600;
   padding: 0 15px;
   line-height: 50px;
+  position: relative;
+}
+#nav > li > a::after { 
+  content: ""; 
+  position: absolute;
+  bottom: 0;
+  left: 15%;
+  width: 0; height: 3px;
+  background-color: #d43540;
+  transition-duration: 300ms;
+}
+#nav > li > a:hover::after {
+  width: 70%;
 }
 #header-wrap::after {content: ""; display: block; clear: both;}
 
